--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center; 
-    position:fixed;   
+     
 }
 .logo-header {
     width: 148.75px;
@@ -34,12 +34,14 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 110px;
+    padding: 20px 0 20px 0;
 }
 .header-logo{
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 600px;
+    height: 150px;
+    padding: 10px 0 0 20px ;
 }
 img.logo {
     width: 45px;
@@ -50,11 +52,10 @@ h1 {
     font-weight: 600;
     font-size: 36px;
     color: #ffffff;
-    margin-left: 8px;
 }
 h3 {
     color: #ffffff;
-    padding: 10px;
+    padding: 5px;
 }
 .calculadora-nps-dc {
     display: flex;
@@ -63,24 +64,27 @@ h3 {
     flex-direction: column;
     background: #d65e98;
     opacity: 0.9;
-    width: 50%;
-    height: 400px;
+    width: 700px;
+    height:700px;
     border-radius: 8px;
 }
 p {
     padding: 30px;
-    width: 90%;
+    width: 600px;
     text-align: left;
     font-size: 20px;
     color: #ffffff;
 }
 .buttons {
     display: flex;
+    justify-content: center;
+    width: 550px;
+    height: 60px;
 }
 .btn {
-    width: 30px;
-    height: 40px;
-    font-size: 16px;
+    width: 45px;
+    height: 55px;
+    font-size: 20px;
     color: #ffffff;
     background-color: #C92071;
     margin-left: 8px;
