--- a/css/style.css
+++ b/css/style.css
@@ -136,3 +136,83 @@ p {
     cursor: pointer;
     margin: 20px;
 }
+@media screen and (max-width: 768px) {
+ header {
+    display : flex;
+    flex-direction: column;
+    height: 110px;   
+}
+body {
+    margin: 0 auto;
+    width: 100vw;
+    height: 100vh;
+    background-image: url('https://digitalcollege.com.br/wp-content/uploads/2022/04/bg-curso.png');
+    
+}
+img.logo {
+    width: 30px;
+    height: 30px;   
+}
+h1 {
+    font-size: 30px
+}
+.logo-header {
+    position: inherit;
+    width: 135px;
+    height: 45px;
+    margin-bottom: 10px;
+}
+.header-logo{
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    height: 100px;
+    padding: 10px 0 0 10px;
+    
+}
+h3 {
+    color: #ffffff;
+    font-size: 12px;
+    padding: 5px;
+}
+.calculadora-nps-dc {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: #d65e98;
+    opacity: 0.9;
+    width: 400px;
+    height: 450px;
+    border-radius: 8px;
+}
+p {
+    padding: 10px;
+    width: 300px;
+    text-align: left;
+    font-size: 12px;
+    color: #ffffff;
+}
+.buttons {
+    display: flex;
+    justify-content: center;
+    width: 250px;
+    height: 40px;
+}
+.btn {
+    width: 20px;
+    height: 30px;
+    font-size: 10px;
+    color: #ffffff;
+    background-color: #C92071;
+    border-radius: 3px;
+    border: none;
+    cursor: pointer;
+}
+}
+@media screen and (max-width: 460px) {
+.calculadora-nps-dc {
+    width: 350px;
+   
+}
+}
