--- a/css/style.css
+++ b/css/style.css
@@ -196,18 +196,20 @@ p {
 .buttons {
     display: flex;
     justify-content: center;
-    width: 250px;
+    width: 300px;
     height: 40px;
 }
 .btn {
-    width: 20px;
+    width: 35px;
     height: 30px;
-    font-size: 10px;
+    font-size: 12px;
     color: #ffffff;
     background-color: #C92071;
     border-radius: 3px;
     border: none;
     cursor: pointer;
+    margin-left: 10px;
+
 }
 }
 @media screen and (max-width: 460px) {
